fixed alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,7 +103,7 @@ form {
 }
 
 .second-helping {
-	color: var(--tertiary-dark);
+	color: var(--secondary);
 }
 
 .footer-copyright {
@@ -114,7 +114,7 @@ form {
 
 .submit-button {
 	position: relative;
-	right: 15%;
+	left: 60%;
 }
 
 .form {
